--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,13 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-family: 'Helvetica', sans-serif;
 }
 
 @layer utilities {
